--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
         <div>
           <label for="priority">Priority:</label>
           <select id="priority">
-            <option value="low">Low</option>
-            <option value="medium">Medium</option>
-            <option value="high">High</option>
+            <option value="Low">Low</option>
+            <option value="Medium">Medium</option>
+            <option value="High">High</option>
           </select>
         </div>
         <div>
