implement task sorting for tasks by ID and deadline

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
       </section>
       <section id="task-list">
         <h2>Tasks</h2>
+        <input type="checkbox" id="sortById" /> Sort by ID
+        <input type="checkbox" id="sortByDeadline" /> Sort by Deadline
         <ul id="tasks"></ul>
       </section>
     </main>
