--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         <div class="priority-input">
           <label for="priority">Priority</label>
           <select id="priority">
+            <option value="">Select priority...</option>
             <option value="Low">Low</option>
             <option value="Medium">Medium</option>
             <option value="High">High</option>
@@ -32,6 +33,15 @@
         <div class="due-date-input">
           <label for="due-date">Due Date</label>
           <input type="date" id="due-date" />
+        </div>
+        <div class="category-input">
+          <label for="category">Category</label>
+          <select id="category">
+            <option value="">Select category...</option>
+            <option value="School">School</option>
+            <option value="Work">Work</option>
+            <option value="Private">Private</option>
+          </select>
         </div>
         <button class="add-task-btn" id="add-task-btn">Add</button>
       </section>
