--- a/public/index.html
+++ b/public/index.html
@@ -66,5 +66,6 @@
       </section>
     </main>
     <footer><p>© 2025 Task Track</p></footer>
+    <div id="notification" class="show-notification"></div>
   </body>
 </html>
