Add one day left warning and format task deadlines

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             type="text"
             id="new-task"
             placeholder="Add new task..."
-            maxlength="200"
+            maxlength="100"
             autofocus
           />
         </div>
@@ -32,7 +32,7 @@
         </div>
         <div class="due-date-input">
           <label for="due-date">Due Date</label>
-          <input type="date" id="due-date" />
+          <input type="datetime-local" id="due-date" />
         </div>
         <div class="category-input">
           <label for="category">Category</label>
