--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,16 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <header><h1>Task Track</h1></header>
+    <header>
+      <h1>Task Track</h1>
+      <h3>Your Personal Task Manager</h3>
+      <div class="nav">
+        <a href="/">Home</a>
+        <a href="#task-input">Add Task</a>
+        <a href="#task-list">View Tasks</a>
+        <a href="about.html">About</a>
+      </div>
+    </header>
     <main>
       <section class="task-input" id="task-input">
         <div class="new-task-input">
