Add logo with rotating animation

--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <header>
-      <h1>About Task Track</h1>
+      <h1 class="about-h1">About Task Track</h1>
+      <img
+        src="/logo.png"
+        alt="Task Track Logo"
+        class="logo-img"
+        style="max-width: 175px"
+      />
     </header>
     <div class="nav">
       <a href="/">Home</a>
