--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,14 @@
   </head>
   <body>
     <header>
+      <img
+        src="/logo.png"
+        alt="Task Track Logo"
+        class="logo-img"
+        style="max-width: 175px"
+      />
       <h1>Task Track</h1>
-      <h3>Your Personal Task Manager</h3>
+      <h4>Your Personal Task Manager</h4>
     </header>
     <div class="nav">
       <a href="/">Home</a>
