Add a custom 404 page

--- a/public/about.html
+++ b/public/about.html
@@ -70,14 +70,12 @@
         <h3>Color Coding</h3>
         <ul>
           <li>
-            <strong>White glow</strong> - Less than 1 day remaining until
-            deadline
+            <strong>White</strong> - Less than 1 day remaining until deadline
           </li>
           <li>
-            <strong>Red glow</strong> - Less than 1 hour remaining until
-            deadline
+            <strong>Red</strong> - Less than 1 hour remaining until deadline
           </li>
-          <li><strong>(Time is up!)</strong> - The deadline has passed</li>
+          <li><strong>(Expired!)</strong> - The deadline has passed</li>
         </ul>
 
         <div class="back-link">
