Add completed tasks counter based on done status

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,15 @@
       <section class="task-list" id="task-list">
         <h2>Tasks</h2>
         <div class="sort-count">
-          <div class="total">Total Tasks: <span id="total-tasks">0</span></div>
+          <div class="task-counts">
+            <div class="total">
+              Total Tasks: <span id="total-tasks">0</span>
+            </div>
+            <div class="completed-tasks">
+              Done Tasks: <span id="completed-tasks">0</span>
+            </div>
+          </div>
+
           <label><input type="checkbox" id="sortById" />Sort by ID</label>
           <label
             ><input type="checkbox" id="sortByPriority" />Sort by
