Updated all colors in styles.css with  beige tema

--- a/public/about.html
+++ b/public/about.html
@@ -73,7 +73,7 @@
             <strong>White</strong> - Less than 1 day remaining until deadline
           </li>
           <li>
-            <strong>Red</strong> - Less than 1 hour remaining until deadline
+            <strong>Golden Beige</strong> - Less than 1 hour remaining until deadline
           </li>
           <li><strong>(Expired!)</strong> - The deadline has passed</li>
         </ul>
