Change logo image

--- a/public/about.html
+++ b/public/about.html
@@ -56,6 +56,10 @@
           <li>
             <strong>Status</strong> - Mark tasks as complete with a checkbox
           </li>
+          <li>
+            <strong>Statistics</strong> - View total tasks and completed tasks
+            count at a glance
+          </li>
         </ul>
 
         <h3>How to Use Task Track?</h3>
@@ -73,7 +77,8 @@
             <strong>White</strong> - Less than 1 day remaining until deadline
           </li>
           <li>
-            <strong>Golden Beige</strong> - Less than 1 hour remaining until deadline
+            <strong>Golden Beige</strong> - Less than 1 hour remaining until
+            deadline
           </li>
           <li><strong>(Expired!)</strong> - The deadline has passed</li>
         </ul>
