Fix styling issues

--- a/public/404.html
+++ b/public/404.html
@@ -24,7 +24,7 @@
       <section class="notfound-content">
         <h1>404</h1>
         <h3>Oops! This page not found...</h3>
-        <p></p>Looks like Donald Duck has hidden the page you were looking for.</p>
+        <p>Looks like Donald Duck has hidden the page you were looking for.</p>
         <img
           src="/404.png"
           alt="Donald Duck 404"
