--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,6 @@
       </section>
     </main>
     <footer><p>© 2025 Task Track</p></footer>
-    <div id="notification" class="show-notification"></div>
+    <div id="notification" class="hide-notification"></div>
   </body>
 </html>
