Apply minor CSS fixes and improvements

--- a/public/404.html
+++ b/public/404.html
@@ -24,7 +24,6 @@
       <section class="notfound-content">
         <h1>404</h1>
         <h3>Oops! This page not found...</h3>
-        <p>Looks like Donald Duck has hidden the page you were looking for.</p>
         <img
           src="/404.png"
           alt="Donald Duck 404"
@@ -34,6 +33,6 @@
         <p>Please check the URL or Click "Home" to get back on track!.</p>
       </section>
     </main>
-    <footer><p>© 2025 Task Track</p></footer>
+    <footer><p>© 2025 Task Track - MAAS</p></footer>
   </body>
 </html>
