--- a/public/about.html
+++ b/public/about.html
@@ -84,10 +84,10 @@
         </ul>
 
         <div class="back-link">
-          <a href="/" class="btn-back">← Back To Home</a>
+          <a href="/" class="btn-back">Back To Home</a>
         </div>
       </section>
     </main>
-    <footer><p>© 2025 Task Track</p></footer>
+    <footer><p>© 2025 Task Track - MAAS</p></footer>
   </body>
 </html>
